# hire-panel

./: .gitignore  CLAUDE.md  CR.md  PROJECT.md  README.md  TASKS.md  app.py  main.py  pyproject.toml
backend/: main.py
backend/pipeline/: __init__.py  feedback_graph.py  jd_graph.py  resume_graph.py
backend/routers/: feedback.py  jd.py  resume.py  sessions.py  sse.py
backend/schemas/: feedback.py  jd.py  session.py
backend/services/: db.py  feedback.py  jd.py  resume.py  session.py  snapshot.py
cr/: cr.20260530105724.md  cr.20260530110421.md  cr.20260530114134.md  cr.20260530114712.md  cr.20260530115344.md  cr.20260530120259.md  cr.20260530160743.md  cr.20260530161855.md  cr.20260530162803.md  cr.20260530164114.md  cr.20260530164724.md  cr.20260530164954.md  cr.20260530165946.md  cr.20260530170222.md  cr.20260530170601.md  cr.20260530173318.md  cr.20260530175127.md  cr.20260530175438.md  cr.20260531144657.md  cr.20260531151020.md  cr.20260531153654.md  cr.20260531154607.md  cr.20260531155136.md  cr.20260531155603.md  cr.20260601000000.md  cr.20260601113241.md  cr.20260602093559.md  cr.20260602110904.md  cr.20260602120435.md  cr.20260602121125.md  cr.20260602150216.md  cr.20260602152609.md  cr.20260602153208.md  cr.20260602154631.md  cr.20260602203851.md  cr.20260602204129.md
frontend/: package-lock.json  package.json  playwright.config.ts
graph/: jd_graph.py  resume_graph.py  state.py
pipeline/: feedback_graph.py  resume_graph.py  utils.py
scripts/: cr_distill_hook.py  cr_guard.py  run_server.py
ui/: handlers.py  helpers.py  state.py
(+56 files in other folders)
