[project]
name = "hire-panel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain-core>=1.4.0",
    "langchain-openai>=1.2.1",
    "langgraph>=1.2.0",
    "pdfplumber>=0.11.9",
    "pydantic>=2.13.4",
    "streamlit>=1.45.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
